Added availability html and availability controller

--- a/planifets/www/index.html
+++ b/planifets/www/index.html
@@ -25,6 +25,7 @@
     <script src="js/controllers/planningsCtrl.js"></script>
     <script src="js/controllers/planningCtrl.js"></script>
     <script src="js/controllers/availabilitiesCtrl.js"></script>
+    <script src="js/controllers/availabilityCtrl.js"></script>
   </head>
 
   <body ng-app="planifETS">
