Added new services and directive to index.html

--- a/planifets/www/index.html
+++ b/planifets/www/index.html
@@ -26,6 +26,10 @@
     <script src="js/controllers/planningCtrl.js"></script>
     <script src="js/controllers/availabilitiesCtrl.js"></script>
     <script src="js/controllers/availabilityCtrl.js"></script>
+    <script src="js/services/titleService.js"></script>
+    <script src="js/services/courseService.js"></script>
+    <script src="js/services/planningService.js"></script>
+    <script src="js/directives/ionSearchSelect.js"></script>
   </head>
 
   <body ng-app="planifETS">
