Added Backand SDK lib

--- a/planifets/www/index.html
+++ b/planifets/www/index.html
@@ -30,6 +30,9 @@
     <script src="js/services/courseService.js"></script>
     <script src="js/services/planningService.js"></script>
     <script src="js/directives/ionSearchSelect.js"></script>
+
+    <!-- Backand SDK for Angular -->
+    <script src="lib/angularbknd-sdk/dist/backand.min.js"></script>
   </head>
 
   <body ng-app="planifETS">
