Added availabilityService, dataBaseService, programService and semesterService

--- a/planifets/www/index.html
+++ b/planifets/www/index.html
@@ -28,11 +28,16 @@
     <script src="js/controllers/availabilityCtrl.js"></script>
     <script src="js/services/titleService.js"></script>
     <script src="js/services/courseService.js"></script>
+    <script src="js/services/semesterService.js"></script>
+    <script src="js/services/programService.js"></script>
+    <script src="js/services/availabilityService.js"></script>
     <script src="js/services/planningService.js"></script>
+    <script src="js/services/dataBaseService.js"></script>
     <script src="js/directives/ionSearchSelect.js"></script>
 
     <!-- Backand SDK for Angular -->
     <script src="lib/angularbknd-sdk/dist/backand.min.js"></script>
+    <script src="lib/angular-cookies/angular-cookies.js"></script>
   </head>
 
   <body ng-app="planifETS">
